# ruchatos

./: Cargo.toml  README.md  test.sh
ruchatos_kernel/: Cargo.toml
ruchatos_kernel/src/: main.rs
ruchatos_loader/: Cargo.toml
ruchatos_loader/src/: allocator.rs  elf_app.rs  logger.rs  main.rs  stdin.rs  stdout.rs  text_output.rs
src/: main.rs
