[package]
name = "dankos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
r-efi = "4.3"
log = "0.4"
libm = "0.2.8"
anyhow = { default-features = false, version = "1.0" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
